New in version 0.4.7
==============================
* Support/require xulrunner 2.0+
* Support linking againgst libwebkit-gtk3 (-DWITH_WEBKIT3=ON)
* Issues closed:
  - #149: always test for the right python noarch module path
  - #155: Cannot compile with Firefox 4
  - #156: libproxy should build against webkitgtk-3.0
  - #158: Won't compile w/ xulrunner 2.0 final
  - #159: libproxy fails with autoconfiguration "http://proxy.domain.com"

New in version 0.4.6
==============================	
* Fixed a crash in the URL parser
* Fixed build issues with Visual Studio
* Updated the INSTALL file
* Install Python binding in prefix path if site-packages exists
* Fixed compilation with Visual Studio


New in version 0.4.5
===============================
* C# bindings are installable (-DWITH_DOTNET=ON)
* C# bindings installation path can be changed using -DGAC_DIR=
* Internal libmodman build fixed
* Installation dirs are now all relative to CMAKE_INSTALL_PREFIX
* Fixed test while using --as-needed linker flag
* Fixed generation of libproxy-1.0.pc
* Basic support for Mingw added (not yet 100% functional)
* Ruby binding implemented (not yet in the build system)
* Fixed modules not being found caused by relative LIBEXEC_INSTALL_DIR
* Fixed bug with builtin plugins (Issue 133)
* Vala bindings installation path can be changed using -DVAPI_DIR=
* Python bindings installation path can be changed using -DPYTHON_SITEPKG_DIR=
* Perl bindings can be installed in vendor directory (-DPERL_VENDORARCH=ON)
* Perl bindings installation path can be change using -DPX_PERL_ARCH=
* Unit test now builds on OSX

New in version 0.4.4
===============================
* Add support for optionally building using a system libmodman
* Rework build system to be cleaner
* Fix two major build system bugs: 127, 128

New in version 0.4.3
===============================
* Test can now be out-compiled using BUILD_TESTING=OFF
* Fixed python binding not handling NULL pointer