@@ -28,7 +28,8 @@ endif()
 #
 message("MODULES TO BUILD:")
 px_module(config_envvar            "${ENVVAR_FOUND}" 1)
-px_module(config_gnome             "${GNOME_FOUND}"  0)
+px_module(config_gnome             "${GNOME2_FOUND}" 0)
+px_module(config_gnome3            "${GNOME3_FOUND}" 0)
 px_module(config_kde4              "${KDE4_FOUND}"   0       ${KDE4_LIBRARIES})
 px_module(config_macosx            "${SC_FOUND}"     1       ${SC_LIBRARIES} ${CF_LIBRARIES})
 px_module(config_w32reg            "${WIN32}"        1)
