@@ -1,10 +1,21 @@
 if (NOT WIN32 AND NOT APPLE)
-  px_check_modules(GNOME gconf-2.0 gobject-2.0)
+  option(WITH_GNOME3 "Target a GNOME 3 system (gsettings)" ON)
+  if(WITH_GNOME3)
+    px_check_modules(GNOME3 gio-2.0 gobject-2.0)
+  else(WITH_GNOME3)
+    px_check_modules(GNOME2 gconf-2.0 gobject-2.0)
+  endif(WITH_GNOME3)
   
   # GNOME (gconf) helper
   if(GNOME_FOUND)
-    add_executable(pxgconf modules/pxgconf.cpp)
-    target_link_libraries(pxgconf ${GNOME_LIBRARIES})
-    install(TARGETS pxgconf RUNTIME DESTINATION ${LIBEXEC_INSTALL_DIR})
+    if(WITH_GNOME3)
+      add_executable(pxgsettings modules/pxgsettings.cpp)
+      target_link_libraries(pxgsettings ${GNOME_LIBRARIES})
+      install(TARGETS pxgsettings RUNTIME DESTINATION ${LIBEXEC_INSTALL_DIR})
+    else(WITH_GNOME3)
+      add_executable(pxgconf modules/pxgconf.cpp)
+      target_link_libraries(pxgconf ${GNOME_LIBRARIES})
+      install(TARGETS pxgconf RUNTIME DESTINATION ${LIBEXEC_INSTALL_DIR})
+    endif(WITH_GNOME3)
   endif()
 endif()
